added about page to home page, changed around timeline to have correct contents

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,9 +13,11 @@ const title = "Luca Ficano Latimer’s Portfolio";
     <ul class="nav">
       <li><a class="btn" href="/">Home</a></li>
       <li><a class="btn" href="/projects">Projects</a></li>
-      <li><a class="btn" href="/about">About</a></li>
+      <!-- Jump to the About section on the same page -->
+      <li><a class="btn" href="/#about">About</a></li>
       <li><a class="btn primary" href={resumeUrl} target="_blank" rel="noreferrer">Resume</a></li>
     </ul>
   </div>
 </header>
+
 
